@@ -1,5 +1,13 @@
 Changelog for Meteo
 
+Meteo 0.1.3 - 2007/12/12
+
+  - Added Basque translations.
+      Thanks to Mikel Larreategi <mlarreategi@codesyntax.com>
+  - Switch from PNG to GIF configlet icon for transparent bug in IE.
+  - Enhanced parsing of complex names of localities.
+  - Fixed minor bugs.
+
 Meteo 0.1.2 - 2007/11/26
 
   - Added metadata files for icons.
